<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="library_title">Library</string>
    <string name="library_subtitle">Manage the colors and palettes you use in your projects</string>
    <string name="library_tab_colors">Colors</string>
    <string name="library_tab_palettes">Palettes</string>
    <string name="library_search_label">Search library</string>
    <string name="library_search_hint">Color, yarn, shade, or palette</string>
    <string name="library_clear_search">Clear search</string>
    <string name="library_add_color">Add color</string>
    <string name="library_add_palette">Add palette</string>
    <string name="library_edit">Edit</string>
...
